--- a/packages/swc-vanilla-extract-visitor/Cargo.toml
+++ b/packages/swc-vanilla-extract-visitor/Cargo.toml
@@ -8,6 +8,7 @@ repository  = "https://github.com/kwonoj/swc-plugin-vanilla-extract"
 version     = "0.0.11"
 
 [dependencies]
+swc_core = "0.22.0"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
