--- a/spec/swc-vanilla-custom-transform/Cargo.toml
+++ b/spec/swc-vanilla-custom-transform/Cargo.toml
@@ -22,6 +22,7 @@ napi-derive = { version = "2.9.0", default-features = false, features = [
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = { version = "1.0.85", features = ["unbounded_depth"] }
 
+swc-vanilla-extract-visitor = { path = "../../packages/swc-vanilla-extract-visitor" }
 swc_core = { version = "0.22.0", features = [
   "common_concurrent",
   "ecma_transforms",
