--- a/packages/swc-plugin-vanilla-extract/Cargo.toml
+++ b/packages/swc-plugin-vanilla-extract/Cargo.toml
@@ -11,4 +11,5 @@ version     = "0.0.1"
 crate-type = ["cdylib"]
 
 [dependencies]
+swc-vanilla-extract-visitor = { path = "../swc-vanilla-extract-visitor", version = "0.0.1" }
 swc_core                = { version = "0.22.0", features = ["plugin_transform"] }
