--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "build:all": "npm-run-all build:customtransform build:plugin",
     "build:customtransform": "napi build --platform --cargo-cwd ./spec/swc-vanilla-custom-transform",
     "build:plugin": "cargo build -p swc-plugin-vanilla-extract --target wasm32-wasi",
-    "test:plugin": "npm-run-all build:all && mocha",
-    "test:customtransform": "npm-run-all build:all && cross-env SWC_TRANSFORM_CUSTOM=1 mocha",
+    "test:plugin": "npm-run-all build:all && jest",
+    "test:customtransform": "npm-run-all build:all && cross-env SWC_TRANSFORM_CUSTOM=1 jest",
     "test": "npm-run-all test:plugin test:customtransform",
-    "test:debug": "npm-run-all build:all && cross-env FILTER=\"debug-test\" DEBUG=1 mocha",
     "prepare": "husky install"
   },
   "repository": {
@@ -54,18 +53,20 @@
   },
   "homepage": "https://github.com/kwonoj/swc-plugin-vanilla-extract#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-typescript": "^7.18.6",
     "@napi-rs/cli": "^2.11.0",
     "@swc-node/register": "^1.5.1",
     "@swc/core": "^1.2.248",
     "@taplo/cli": "^0.4.2",
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^9.1.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.6.5",
-    "chai": "^4.3.6",
+    "babel-jest": "^29.0.2",
     "cross-env": "^7.0.3",
     "husky": "^8.0.1",
+    "jest": "^29.0.2",
     "lint-staged": "^13.0.3",
-    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.0",
     "typescript": "^4.6.2"
