--- a/packages/swc-vanilla-extract-visitor/Cargo.toml
+++ b/packages/swc-vanilla-extract-visitor/Cargo.toml
@@ -9,7 +9,9 @@ version     = "0.0.1"
 
 [dependencies]
 once_cell = "1.14.0"
-swc_core = "0.22.0"
+regex          = "1.6.0"
+path-slash = "0.2.1"
+swc_core                = { version = "0.22.0", features = ["common", "ecma_quote", "ecma_ast", "ecma_visit", "ecma_visit_path"] }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
