--- a/packages/swc-plugin-vanilla-extract/Cargo.toml
+++ b/packages/swc-plugin-vanilla-extract/Cargo.toml
@@ -11,5 +11,7 @@ version     = "0.0.1"
 crate-type = ["cdylib"]
 
 [dependencies]
+serde = "1"
+serde_json = "1"
 swc-vanilla-extract-visitor = { path = "../swc-vanilla-extract-visitor", version = "0.0.1" }
 swc_core                = { version = "0.23.13", features = ["plugin_transform", "ecma_visit_path"] }
