--- a/packages/swc-plugin-vanilla-extract/Cargo.toml
+++ b/packages/swc-plugin-vanilla-extract/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors     = ["OJ Kwon <kwon.ohjoong@gmail.com>"]
-description = ""
+description = "Vanilla-extract plugin for SWC"
 edition     = "2021"
 license     = "MIT"
 name        = "swc-plugin-vanilla-extract"
